--- a/src/app/pages/forget-password/forget-password.component.html
+++ b/src/app/pages/forget-password/forget-password.component.html
@@ -7,7 +7,7 @@
         <div class="row text-center">
             <div class="col-md-12">
                 <div class="mb-0">
-                    <h2 class="title">Login</h2>
+                    <h2 class="title">Forget Password</h2>
                     <nav aria-label="breadcrumb" class="">
                         <ol class="breadcrumb main-bg">
                             <li class="breadcrumb-item">
@@ -15,7 +15,7 @@
                                     <i class="fa fa-home" aria-hidden="true"></i>Home
                                 </a>
                             </li>
-                            <li class="breadcrumb-item active">Login</li>
+                            <li class="breadcrumb-item active">Forget Password</li>
                         </ol>
                     </nav>
                 </div>
@@ -24,40 +24,25 @@
     </div>
 </section>
 <!--=================================
-         Banner -->
+                 Banner -->
 <!--=================================
-         MAIN CONTENT -->
+                 MAIN CONTENT -->
 <div class="main-content">
     <!--================================
-            Login -->
+                    Login -->
     <section class="iq-login-regi">
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-lg-6 col-md-12 col-sm-12">
-                    <h2>Login</h2>
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
-                        when looking at its layout.</p>
-                    <h5 class="mt-5">You can Login With <i class="fa fa-hand-o-down" aria-hidden="true"></i></h5>
-                    <ul class="iq-media mt-3">
-                        <li><a href="#" class="fb"><i class="fab fa-facebook"></i></a></li>
-                        <li><a href="#" class="tw"><i class="fab fa-twitter"></i></a></li>
-                        <li><a href="#" class="gplus"><i class="fab fa-google"></i></a></li>
-                        <li><a href="#" class="lkd"><i class="fab fa-linkedin"></i></a></li>
-                    </ul>
-                </div>
+                <div class="col-lg-3"></div>
                 <div class="col-lg-6 col-md-12 col-sm-12 r-mt3">
-                    <form [formGroup]="loginForm">
+                    <form>
                         <div class="form-group">
                             <label class="mb-0" for="username">Email Address</label>
                             <input type="email" formControlName="username" class="form-control" id="username"
                                 placeholder="Email">
                         </div>
-                        <div class="form-group">
-                            <label class="mb-0" for="password">Password</label>
-                            <input type="password" formControlName="password" class="form-control" id="password"
-                                placeholder="Password">
-                        </div>
-                        <div class="row">
+
+                        <!-- <div class="row">
                             <div class="col-sm-6">
                                 <div class="form-check">
                                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
@@ -65,23 +50,24 @@
                                 </div>
                             </div>
                             <div class="col-sm-6 text-right">
-                                <a [routerLinkActive]="['active']" [routerLink]="['/password/forget']"
+                                <a [routerLinkActive]="['active']" [routerLink]="['/forget-password']"
                                     class="link">Forgot
                                     Password?</a>
                             </div>
-                        </div>
-                        <button type="submit" (click)="login()" class="button mt-2 mb-2 w-100">Login</button>
-                        <div class="text-center">
+                        </div> -->
+                        <button type="submit" class="button mt-2 mb-2 w-100" (click)="submitForm()">Send Reset
+                            Link</button>
+                        <!-- <div class="text-center">
                             <div class="small-text mt-1 link">Don't Have an Account? <a href="/register">Register
                                     Now</a></div>
-                        </div>
+                        </div> -->
                     </form>
                 </div>
             </div>
         </div>
     </section>
     <!--================================
-            Login -->
+                    Login -->
 </div>
 <!--=================================
-         MAIN CONTENT -->
+                 MAIN CONTENT -->
