--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -42,24 +42,32 @@
                 </div>
             </div>
             <div class="row no-gutters mt-5">
-                <div class="col-lg-4 col-sm-12">
-                    <div class="pricing-box text-center ">
-                        <div class="price-head mt-2 mb-2">Free</div>
+                <div class="col-lg-4 col-sm-12" *ngFor="let plan of plans">
+                    <div class="pricing-box text-center">
+                        <div class="price-head mt-2 mb-2">{{ plan['subscription_name']}}</div>
                         <div class="price-blog pt-4 pb-4">
-                            <div class="price"> <span class="currency">$</span><strong>00/</strong><span
-                                    class="month">Free</span> </div>
+                            <div class="price"> <span class="currency">$</span><strong>{{ plan['price_monthly']
+                                    }}/</strong><span class="month">month</span> </div>
                         </div>
                         <div class="listing">
                             <ul class="mt-5">
-                                <li>
+                                <li *ngFor="let planFeatures of plan['features']">
+                                    <ng-container *ngIf="planFeatures['value']!=false;else elseTimes">
+                                        <span class="fa fa-check"></span>
+
+                                    </ng-container>
+                                    <ng-template #elseTimes>
+                                        <span class="fa fa-times"></span>
+                                    </ng-template>
                                     <span class="time-of-year">
-                                        Case Management
-                                        <span class="tooltip">It has roots in a piece of classical Latin literature from
-                                            45 BC, making it over 2000 years old. Richard McClintock, a Latin professor
-                                            at Hampden-Sydney College in Virginia.</span>
-                                        <i class="ion-information-circled"></i></span>
+                                        {{ planFeatures['key']}}
+                                        <span class="tooltip">
+                                            {{ planFeatures['description'] }}
+                                        </span>
+                                        <i class="ion-information-circled"></i>
+                                    </span>
                                 </li>
-                                <li>
+                                <!-- <li>
                                     <span class="time-of-year">
                                         Hourly and Flat Fee Billing
                                         <span class="tooltip">It has roots in a piece of classical Latin literature from
@@ -130,13 +138,14 @@
                                             45 BC, making it over 2000 years old. Richard McClintock, a Latin professor
                                             at Hampden-Sydney College in Virginia.</span>
                                         <i class="ion-information-circled"></i></span>
-                                </li>
+                                </li> -->
                             </ul>
                         </div>
-                        <a class="button grey mt-5" href="#" role="button">Choose Package</a>
+                        <a class="button grey mt-5" (click)="choosePackage(plan)">Choose
+                            Package</a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 r-mt3">
+                <!-- <div class="col-lg-4 col-sm-12 r-mt3">
                     <div class="pricing-box text-center ">
                         <div class="price-head mt-2 mb-2">Basic</div>
                         <div class="price-blog pt-4 pb-4">
@@ -323,7 +332,7 @@
                         </div>
                         <a class="button grey mt-5" href="#" role="button">Choose Package</a>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
