--- a/src/app/company/quicklinks/quicklinks.component.html
+++ b/src/app/company/quicklinks/quicklinks.component.html
@@ -7,26 +7,23 @@
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <label for="domain-select">Select Domain Name</label>
-              <select class="custom-select" id="domain-select" size="3">
-                <option selected>Open this select menu</option>
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
+              <label for="domain-select">Select Domain Name*</label>
+              <select [formControl] = "selectedDomain" class="custom-select" id="domain-select" size="3">
+                <option *ngFor="let domain of domains" [ngValue]="domain.domain">{{domain.domain}}</option>
               </select>
-              <small id="emailHelp" class="form-text text-muted">Select one domain from the domain dropdown</small>
+              <small id="emailHelp" class="form-text text-muted">Select one domain from the domain dropdown*</small>
             </div>
 
             <div class="form-group">
-              <label for="message-input">Message</label>
-              <input type="text" class="form-control" id="message-input" aria-describedby="emailHelp"
+              <label for="message-input">Message*</label>
+              <input [formControl]="message" type="text" class="form-control" id="message-input" aria-describedby="emailHelp"
                 placeholder="Message" />
               <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?</small>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label for="quicklinks">QuickLinks</label>
+              <label for="quicklinks">QuickLinks*</label>
               <input type="text" class="form-control" id="quicklinks" [formControl]="quickLinkText"
                 aria-describedby="emailHelp" placeholder="Quicklink" />
               <small id="emailHelp" class="form-text text-muted">Example: how are glacier caves formed?</small>
@@ -42,7 +39,7 @@
               <label for="message-input">Added Quicklinks</label>
               <div id="quicklinks-list">
                 <div class="quicklinks-list-item row" *ngFor="
-                    let link of companyService.getQuickLinks();
+                    let link of quicklinksArray.value;
                     let i = index
                   ">
                   <div class="col-md-11">{{ link }}</div>
@@ -61,70 +58,41 @@
             </div>
           </div>
 
-          <button class="btn btn-primary">Submit</button>
-          <div *ngIf="
-              quickLinkText.invalid &&
-              (quickLinkText.dirty || quickLinkText.touched)
-            " class="col-xs-12 col-md-12 alert alert-danger quicklinks-warning">
-            <div *ngIf="quickLinkText.errors?.['required']">
-              Quicklinks field is required
-            </div>
-            <div *ngIf="quickLinkText.errors?.['minlength']">
-              Quicklinks Input must be at least 1 characters long.
-            </div>
-            <div *ngIf="quickLinkText.errors?.['whitespace']">
-              Quicklinks Input only has whitespace characters
-            </div>
-          </div>
+          <button [disabled]="form.invalid" (click)="submitForm()" class="btn btn-primary">Submit</button>
         </div>
 
         <!-- Table -->
         <div class="card">
           <div class="card-body">
-            <div class="card-title">View Added Quicklinks</div>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
-                </tr>
-              </tbody>
-            </table>
-            <nav aria-label="Page navigation example">
-              <ul class="pagination">
-                <li class="page-item">
-                  <a class="page-link" href="#">Previous</a>
-                </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item">
-                  <a class="page-link" href="#">Next</a>
-                </li>
-              </ul>
-            </nav>
+            <div class="card-title">View Added Quicklinks
+            </div>
+            <div class="form-group">
+              <label for="domain-select">Select Domain to view Quicklinks</label>
+              <select [formControl] = "selectedDomainFilter" class="custom-select" id="domain-select">
+                <option [ngValue]="null">No Selection</option>
+                <option *ngFor="let domain of domains" [ngValue]="domain.domain">{{domain.domain}}</option>
+              </select>
+              <small id="emailHelp" class="form-text text-muted">Select one domain from the domain dropdown*</small>
+            </div>
+
+           
+              <div id="quicklinksTagContainer">
+                <p *ngIf="loadedQuickLinks.length === 0; else quickLinkTemplate">No Domain Selected</p>
+                <ng-template #quickLinkTemplate>
+                  <div *ngFor="let quickLinkData of loadedQuickLinks" style="margin-bottom: 10px;" class="card">
+                    <div class="card-header">
+                      <b>Message :</b> <span style="margin-left:10px ;" class="badge badge-pill badge-dark">{{quickLinkData.message}}</span> 
+                    </div>
+                    <div class="card-body">
+                      <h6><b>Quicklinks:</b></h6>
+                      <span style="margin-right: 5px;" *ngFor="let badge of quickLinkData.quicklinks.split(';')" class="badge badge-pill badge-primary">{{badge}}</span>
+                    </div>
+                  </div>
+                </ng-template>
+              </div>
+           
+            
+            
           </div>
         </div>
       </div>
