--- a/src/app/company/reporting/reporting.component.html
+++ b/src/app/company/reporting/reporting.component.html
@@ -7,16 +7,17 @@
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <label for="domain-select">From Date</label>
+              <label for="domain-select">From Date*</label>
               <input
                 type="date"
                 class="form-control"
                 id="message-input"
                 aria-describedby="emailHelp"
                 placeholder="Message"
+                [formControl]="fromDate"
               />
               <small id="emailHelp" class="form-text text-muted"
-                >Select one domain from the domain dropdown</small
+                >Select Date from which you want report to begin</small
               >
             </div>
             <div class="form-group">
@@ -27,64 +28,62 @@
                 id="quicklinks"
                 aria-describedby="emailHelp"
                 placeholder="User"
+                readonly
+                [value] = "reportData.length"
               />
               <small id="emailHelp" class="form-text text-muted"
-                >Example: how are glacier caves formed?;how did apollo creed
-                die;how a vul works;how much is 1 tablespoon of water;how much
-                are the harry potter movies worth</small
+                >This box will show total users found under searched report</small
               >
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <label for="message-input">To Date</label>
+              <label for="message-input">To Date*</label>
               <input
                 type="date"
                 class="form-control"
                 id="message-input"
                 aria-describedby="emailHelp"
                 placeholder="Message"
+                [formControl]="toDate"
               />
               <small id="emailHelp" class="form-text text-muted"
-                >Example: how are glacier caves formed?;how did apollo creed
-                die;how a vul works;how much is 1 tablespoon of water;how much
-                are the harry potter movies worth</small
+                >Select Date from which you want report to end</small
               >
             </div>
           </div>
+          <button [disabled]="fromDate.invalid || toDate.invalid" (click)="submitForm()" type="button" class="btn btn-success">Submit</button>
         </div>
 
         <!-- Table -->
         <div class="card">
-          <div class="card-body">
+          <div id="scrollable-card" class="card-body">
             <div class="card-title">Report</div>
             <table class="table table-striped">
               <thead>
                 <tr>
                   <th scope="col">#</th>
-                  <th scope="col">First</th>
-                  <th scope="col">Last</th>
-                  <th scope="col">Handle</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Feedback</th>
+                  <th scope="col">User Id</th>
+                  <th scope="col">User Name</th>
+                  <th scope="col">User Email</th>
+                  <th scope="col">Country</th>
+                  <th scope="col">State</th>
+                  <th scope="col">Phone No.</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>@mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>@fat</td>
-                </tr>
-                <tr>
-                  <th scope="row">3</th>
-                  <td>Larry</td>
-                  <td>the Bird</td>
-                  <td>@twitter</td>
+                <tr *ngFor="let rowData of reportData; let i = index;">
+                  <th scope="row">{{i}}</th>
+                  <td>{{rowData.date}}</td>
+                  <td>{{rowData.feedback}}</td>
+                  <td>{{rowData.user_id}}</td>
+                  <td>{{rowData.username}}</td>
+                  <td>{{rowData.email}}</td>
+                  <td>{{rowData.country}}</td>
+                  <td>{{rowData.state}}</td>
+                  <td>{{rowData.mobile}}</td>
                 </tr>
               </tbody>
             </table>
