--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,116 +1,155 @@
 <!--=================================
          Banner -->
 <section class="iq-breadcrumb-five main-bg">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-12">
-                <div class="mb-0">
-                    <h2 class="title">Contact-Us</h2>
-                    <nav aria-label="breadcrumb" class="">
-                        <ol class="breadcrumb main-bg">
-                            <li class="breadcrumb-item">
-                                <a href="index.html">
-                                    <i class="fa fa-home" aria-hidden="true"></i>Home
-                                </a>
-                            </li>
-                            <li class="breadcrumb-item active">Contact-Us</li>
-                        </ol>
-                    </nav>
-                </div>
-            </div>
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-12">
+        <div class="mb-0">
+          <h2 class="title">Contact-Us</h2>
+          <nav aria-label="breadcrumb" class="">
+            <ol class="breadcrumb main-bg">
+              <li class="breadcrumb-item">
+                <a href="index.html">
+                  <i class="fa fa-home" aria-hidden="true"></i>Home
+                </a>
+              </li>
+              <li class="breadcrumb-item active">Contact-Us</li>
+            </ol>
+          </nav>
         </div>
+      </div>
     </div>
+  </div>
 </section>
 <!--=================================
                Banner -->
 <!--=================================
                MAIN CONTENT -->
 <div class="main-content">
-    <!--=================================
+  <!--=================================
                   Contact -->
-    <section class="iq-contactbox">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="contact-box">
-                        <h3>Get in Touch</h3>
-                        <form class="p-0" id="contact">
-                            <div class="contact-form mt-4">
-                                <div class="row">
-                                    <div class="col-lg-6 col-sm-12 mb-3">
-                                        <div class="form-group">
-                                            <label class="mb-2">Name</label>
-                                            <input type="text" name="name" class="form-control" id="name"
-                                                placeholder="Your Name">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-sm-12 mb-3">
-                                        <div class="form-group">
-                                            <label class="mb-2">Email</label>
-                                            <input type="text" name="email" class="form-control" id="email"
-                                                placeholder="Your Email">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-sm-12 mb-3">
-                                        <div class="form-group">
-                                            <label class="mb-2">Phone</label>
-                                            <input type="text" name="phone" class="form-control" id="phone"
-                                                placeholder="Your Phone Number">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12 col-sm-12 mb-3">
-                                        <div class="form-group section-field textarea wow fadeInUp"
-                                            data-wow-duration="2.5s">
-                                            <label class="mb-2">Message</label>
-                                            <textarea class="input-message w-100" name="message" id="message"
-                                                placeholder="Type Your Message Here" rows="5"></textarea>
-                                        </div>
-                                        <input type="hidden" name="action" value="sendEmail">
-                                        <div class="section-field iq-mt-20">
-                                            <div class="g-recaptcha"
-                                                data-sitekey="6LdA3mYUAAAAANpUuZTLbKM_s23tTHlcdJ7dYfgI">
-                                            </div>
-                                        </div>
-                                        <button id="submit" name="submit" type="submit" value="Send"
-                                            class="button pull-right wow fadeInUp mt-3" data-wow-duration="1.0s">Send
-                                            Message</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
+  <section class="iq-contactbox">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="contact-box">
+            <h3>Get in Touch</h3>
+            <form class="p-0" [formGroup]="contactForm">
+              <div class="contact-form mt-4">
+                <div class="row">
+                  <div class="col-lg-6 col-sm-12 mb-3">
+                    <div class="form-group">
+                      <label class="mb-2">Name</label>
+                      <input type="text" name="name" formControlName="name" class="form-control" placeholder="Your Name"
+                        [ngClass]="{ 'is-invalid': submitted && contactForm.controls['name'].errors }">
+                      <div
+                        *ngIf="contactForm.controls['name'].status=='INVALID' && contactForm.controls['name'].touched && submitted">
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['name'].errors.required">
+                          Name is required!
+                        </p>
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['name'].errors.pattern">
+                          Invalid Name!
+                        </p>
+                      </div>
                     </div>
-                </div>
-                <div class="col-lg-6 r-mt3">
-                    <div class="contact-bg">
-                        <h2>Contact Info</h2>
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <ul class="iq-contact text-white">
-                                    <li>
-                                        <i class="fas fa-phone"></i>
-                                        <p>+0123 456 789</p>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-envelope"></i>
-                                        <p>xyz@gmail.com</p>
-                                    </li>
-                                    <li>
-                                        <i class="fas fa-map-marker-alt"></i>
-                                        <p>Carol J. Stephens 1635 Franklin, Montgomery, AL 36104 USA</p>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-12">
-                                <iframe class="w-100 mt-3"
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.840289118572!2d144.95373631550405!3d-37.81720974201396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4c2b349649%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2sin!4v1543402448828"
-                                    style="border:0" allowfullscreen></iframe>
-                            </div>
-                        </div>
+                  </div>
+                  <div class="col-lg-6 col-sm-12 mb-3">
+                    <div class="form-group">
+                      <label class="mb-2">Email</label>
+                      <input type="text" name="email" formControlName="email" class="form-control" id="email"
+                        placeholder="Your Email"
+                        [ngClass]="{ 'is-invalid': submitted && contactForm.controls['email'].errors }">
+                      <div
+                        *ngIf="contactForm.controls['email'].status=='INVALID' && contactForm.controls['email'].touched && submitted">
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['email'].errors.required">
+                          Email is required!
+                        </p>
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['email'].errors.email">
+                          Invalid Email Format!
+                        </p>
+                      </div>
                     </div>
+                  </div>
+                  <div class="col-lg-12 col-sm-12 mb-3">
+                    <div class="form-group">
+                      <label class="mb-2">Phone</label>
+                      <input type="text" name="mobile_no" formControlName="mobile_no" class="form-control" id="phone"
+                        placeholder="Your Phone Number">
+                      <div
+                        *ngIf="contactForm.controls['mobile_no'].status=='INVALID' && contactForm.controls['mobile_no'].touched">
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['mobile_no'].errors.required">
+                          Mobile Number is required!
+                        </p>
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['mobile_no'].errors.pattern">
+                          Invalid Mobile Number!
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-12 col-sm-12 mb-3">
+                    <div class="form-group section-field textarea wow fadeInUp" data-wow-duration="2.5s">
+                      <label class="mb-2">Message</label>
+                      <textarea class="input-message w-100" formControlName="message" name="message" id="message"
+                        placeholder="Type Your Message Here" rows="5"></textarea>
+                      <div
+                        *ngIf="contactForm.controls['message'].status=='INVALID' && contactForm.controls['message'].touched">
+                        <p class="error-msg-ab" style="color: brown;"
+                          *ngIf="contactForm.controls['message'].errors.required">
+                          Message is required!
+                        </p>
+                      </div>
+                    </div>
+                    <input type="hidden" name="action" value="sendEmail">
+                    <div class="section-field iq-mt-20">
+                      <div class="g-recaptcha" data-sitekey="6LdA3mYUAAAAANpUuZTLbKM_s23tTHlcdJ7dYfgI">
+                      </div>
+                    </div>
+                    <button id="submit" name="submit" type="submit" (click)="submitContactForm()" value="Send"
+                      class="button pull-right wow fadeInUp mt-3" data-wow-duration="1.0s">Send
+                      Message</button>
+                  </div>
                 </div>
-            </div>
+              </div>
+            </form>
+          </div>
         </div>
-    </section>
+        <div class="col-lg-6 r-mt3">
+          <div class="contact-bg">
+            <h2>Contact Info</h2>
+            <div class="row">
+              <div class="col-sm-12">
+                <ul class="iq-contact text-white">
+                  <li>
+                    <i class="fas fa-phone"></i>
+                    <p>+0123 456 789</p>
+                  </li>
+                  <li>
+                    <i class="fas fa-envelope"></i>
+                    <p>xyz@gmail.com</p>
+                  </li>
+                  <li>
+                    <i class="fas fa-map-marker-alt"></i>
+                    <p>Carol J. Stephens 1635 Franklin, Montgomery, AL 36104 USA</p>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-sm-12">
+                <iframe class="w-100 mt-3"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.840289118572!2d144.95373631550405!3d-37.81720974201396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4c2b349649%3A0xb6899234e561db11!2sEnvato!5e0!3m2!1sen!2sin!4v1543402448828"
+                  style="border:0" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </div>
 <!--=================================
