--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -11,10 +11,11 @@
             Inbox
         </div>
         <div class="menu-item">
-            <a routerlinkactive="router-link-exact-active" class="menu-item-link menu-active"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+            <a (click)="sendSelectedPage('live-chats')" routerlinkactive="router-link-exact-active" class="menu-item-link" [ngClass]="{'menu-active':activeSection ==='live-chats'}"> <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
               </svg>Live Chats <p-badge [value]="'2'"></p-badge></a>
-            <a routerlinkactive="router-link-exact-active" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+
+            <a (click)="sendSelectedPage('incoming-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='incoming-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
               </svg>Incoming Chats <p-badge [value]="'2'"></p-badge></a>
         </div>
@@ -22,11 +23,11 @@
             History
         </div>
         <div class="menu-item">
-            <a routerlinkactive="router-link-exact-active" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+            <a (click)="sendSelectedPage('resolved-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='resolved-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05z"/>
               </svg>Resolved Chats <p-badge [value]="'2'"></p-badge></a>
-            <a routerlinkactive="router-link-exact-active" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
+            <a  (click)="sendSelectedPage('unresolved-chats')" routerlinkactive="router-link-exact-active" [ngClass]="{'menu-active':activeSection ==='unresolved-chats'}" class="menu-item-link"><svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                 <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
               </svg>Unresolved Chats <p-badge [value]="'2'"></p-badge></a>
