--- a/src/app/agent/layout/sidebar/sidebar.component.html
+++ b/src/app/agent/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="agent-sidebar p-grid">
     <div class="p-col-12 agent-name">
        
-        <h3 class="p-col-9 p-md-9"><p-avatar label="PT" shape="circle" styleClass="avatar-label"></p-avatar> Pankaj Tripathi</h3>
+        <h3 class="p-col-9 p-md-9"><p-avatar label="PT" shape="circle" styleClass="avatar-label"></p-avatar>&nbsp;{{agentName}}</h3>
     </div>
 
     <p-divider></p-divider>
